--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 ===================================================== -->
 <section class="section hero visible" id="hero">
   <div class="glass-card">
-    <h1 class="cursive">Hey… It’s You ❤️</h1>
+    <h1 class="cursive">Hey… Sara ❤️</h1>
 
     <p>
       If you’re reading this, it means you clicked the link.
@@ -335,3 +335,4 @@
 
 </body>
 </html>
+
