--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <h1 class="cursive">Hey… Sara ❤️</h1>
 
     <p>
-      If you’re reading this, it means you clicked the link.
-      And that already means more to me than you realize.
+I want you to read this slowly, one part at a time.
+Just follow along — I promise it’s worth it.
     </p>
 
     <p>
@@ -126,6 +126,7 @@
 <section class="section" id="memories">
   <div class="glass-card wide">
     <h2 class="cursive">Little Reasons I Fell</h2>
+    <h3 class="cursive">click every section given below</h3>
 
     <div class="memory-grid">
 
@@ -335,4 +336,5 @@
 
 </body>
 </html>
+
 
