--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ Just follow along — I promise it’s worth it.
 <section class="section" id="memories">
   <div class="glass-card wide">
     <h2 class="cursive">Little Reasons I Fell</h2>
-    <h3 class="cursive">click every section given below</h3>
+    <h3>(click every section given below)</h3>
 
     <div class="memory-grid">
 
@@ -336,5 +336,6 @@ Just follow along — I promise it’s worth it.
 
 </body>
 </html>
+
 
 
