--- a/index.html
+++ b/index.html
@@ -130,32 +130,50 @@ Just follow along — I promise it’s worth it.
 
     <div class="memory-grid">
 
-      <button class="memory-card" data-message="Your smile has a way of fixing bad days.">
+      <button class="memory-card" data-message="Your smile arrives like morning light,
+it turns my quiet wrongs to right.
+In just one glance, the day feels new,
+the world makes sense — because of you.">
         <span>😊</span>
         <p>Your Smile</p>
       </button>
 
-      <button class="memory-card" data-message="Talking to you never feels forced.">
+      <button class="memory-card" data-message="Talking to you feels easy and true,
+like words that already know what to do.
+No pauses feel heavy, no silence wrong,
+everything flows where we belong.">
         <span>💬</span>
         <p>Our Conversations</p>
       </button>
 
-      <button class="memory-card" data-message="You care deeply, even when no one is watching.">
+      <button class="memory-card" data-message="You care in ways the world can’t see,
+when no one’s there, it still feels free.
+No need for praise, no need to show,
+your heart just gives — and lets it go.">
         <span>💖</span>
         <p>Your Heart</p>
       </button>
 
-      <button class="memory-card" data-message="You make silence comfortable.">
+      <button class="memory-card" data-message="With you, even silence feels right,
+it never asks to be filled or fight.
+No awkward space, no need to pretend,
+just quiet moments I don’t want to end.">
         <span>🌙</span>
         <p>Your Presence</p>
       </button>
 
-      <button class="memory-card" data-message="You inspire growth, not pressure.">
+      <button class="memory-card" data-message="You help me grow without a push,
+no heavy weight, no hurried rush.
+With you, becoming feels so kind,
+like space to bloom in my own time.">
         <span>🌱</span>
         <p>Your Impact</p>
       </button>
 
-      <button class="memory-card" data-message="You feel like home.">
+      <button class="memory-card" data-message="You feel like home in ways I can’t explain,
+a quiet calm after every strain.
+No matter where the world may roam,
+my heart knows you — you feel like home.">
         <span>🏡</span>
         <p>Your Feeling</p>
       </button>
@@ -336,6 +354,7 @@ Just follow along — I promise it’s worth it.
 
 </body>
 </html>
+
 
 
 
